k8s/deployment/ingress/generator-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: generator-api-ingress
  namespace: scaffoldops
spec:
  ingressClassName: kong
  rules:
    - host: generator-api.local
      http:
        paths:
          - path: /api/generator/v1/generation-requests
            pathType: Prefix
            backend:
              service:
                name: generator-api-service
                port:
                  number: 80
